--- a/page_index.css
+++ b/page_index.css
@@ -9,7 +9,7 @@
 
 body {
   background-color: #000;
-  color: #f5f5f5;
+  color: #000000;
   height: 100vh;
   display: flex;
   justify-content: center;
