--- a/style/page_index.css
+++ b/style/page_index.css
@@ -6,6 +6,87 @@
   font-family: 'Poppins', sans-serif;
 }
 
+#bg-svg {
+  position: fixed;       /* fica parado como background */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;           /* fica atrás de tudo */
+  opacity: 0.4;         /* ajuste de intensidade */
+  pointer-events: none;  /* não bloqueia cliques */
+}
+
+#bg-svg svg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#home {
+  clip-path: url(#cache);
+}
+
+#red {
+  fill: none;
+  opacity: 0.15;
+  stroke: #CE1B5F;
+  stroke-width: 12;
+  stroke-miterlimit:10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out; 
+}
+
+#blue {
+  fill: none;
+  opacity: 0.15;
+  stroke: #ff0000;
+  stroke-width: 12;
+  stroke-miterlimit:10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+#light-blue {
+  fill: none;
+  opacity: 0.15;
+  stroke: #ffffff;
+  stroke-width: 6;
+  stroke-miterlimit:10;
+  stroke-dasharray: 200;
+  stroke-dashoffset: 800;
+  animation: draw 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;    
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+ }
+    }
+
+@keyframes show {
+  0% {
+    opacity: 0.15;
+ }
+  50% {
+    opacity: 0.2;
+ }
+  100% {
+    opacity: 0.15;
+ }
+    }
+
+
+
+
+
 .navbar {
   transition: all 0.6s ease;
 }
@@ -79,17 +160,18 @@ body {
 
 
 .btn-outline-danger {
-  border-color: #d40000;
-  color: #d40000;
+  border-color: #000000;
+  color: #000000;
+  background-color: #ff0000;
   border-radius: 25px;
   padding: 10px 25px;
   transition: all 0.3s ease;
 }
 
 .btn-outline-danger:hover {
-  background-color: #d40000;
-  color: #000;
-  box-shadow: 0 0 20px rgba(212, 0, 0, 0.5);
+  background-color: #000000;
+  color: #ff0000;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
 }
 
 
